# scs-2d-science-day

./: .gitignore  .gitmodules  CMakeLists.txt
demos/apartment-simulator/src/: main.cpp
dependencies/submodules/delta-studio/demos/delta-basic-demo/src/: main.cpp
dependencies/submodules/delta-studio/dependencies/libraries/OpenGL/include/: OpenGL.h
dependencies/submodules/delta-studio/dependencies/libraries/vulkan/include/: platform.h
dependencies/submodules/delta-studio/engines/basic/src/: os_utilities.cpp
dependencies/submodules/delta-studio/include/: yds_allocator.h  yds_audio_device.h  yds_ds8_system.h  yds_dynamic_array.h  yds_expanding_array.h  yds_math.h  yds_object_data.h  yds_registry.h  yds_timing.h  yds_window.h  yds_windows_input_device.h
dependencies/submodules/delta-studio/physics/include/: grid_partition_system.h  rigid_body.h  rigid_body_system.h
dependencies/submodules/delta-studio/physics/src/: rigid_body.cpp  rigid_body_system.cpp
dependencies/submodules/delta-studio/src/: yds_animation_interchange_file.cpp  yds_audio_file.cpp  yds_audio_streaming.cpp  yds_breakdown_timer.cpp  yds_math.cpp  yds_windows_input_system.cpp  yds_windows_key_maps.cpp
include/: bar_object.h  demo.h  demo_application.h  demo_object.h  link_constraint.h  spring_double_pendulum_demo_Eulerian.h  spring_double_pendulum_demo_RK6.h  spring_object.h  yds_vulkan.h  yds_windows_audio_wave_file.h  yds_windows_input_system.h  yds_windows_monitor.h  yds_windows_window_system.h
physics/: CMakeLists.txt
physics/include/: rigid_body_system.h
shaders/hlsl/: delta_console_shader.fx
src/: bar_object.cpp  blob_game_demo.cpp  complex_roller_demo.cpp  demo.cpp  demo_application.cpp  demo_object.cpp  double_pendulum_application.cpp  energy_transfer_demo.cpp  link_constraint.cpp  spring_cloth_demo.cpp  spring_double_pendulum_demo_Eulerian.cpp  spring_double_pendulum_demo_RK6.cpp  spring_object.cpp  yds_error_system.cpp  yds_timing.cpp
